added google scholar

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
 
 			</div><!-- /.container -->
 			<footer>
-	    		This is a personal site, all opinions are my own.  <a target="_blank" href="https://fr.linkedin.com/in/guillaume-lauga">Linkedin</a></li>
+	    		This is a personal site, all opinions are my own. <a target ="_blank" href ="https://scholar.google.com/citations?user=kp4hEB0AAAAJ&hl=fr&oi=ao">Google Scholar</a> <a target="_blank" href="https://fr.linkedin.com/in/guillaume-lauga">Linkedin</a></li>
 			</footer>
     </body>
 </html>
